--- a/Registar/MvcFirst/MvcFirst/Views/Home/Index.cshtml
+++ b/Registar/MvcFirst/MvcFirst/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <script src="~/Scripts/JavaScriptLabExample1.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery-1.9.1.js" ></script>
    
 
     <title>Index</title>
@@ -41,12 +41,7 @@
 
         </table>
 
-        <input type="text" name="side1" id="side1"/>
-        <input type="text" name="side2" id="side2" />
-        <label name="result" id="result" >here goes the result</label>
-        <button  name="Submit" id="SubmitJS" onclick="convertFromFeetToMetersJS()">Submit With JS</button>
-        <button name="Submit" id="SubmitJQ" onclick="convertFromFeetToMetersJQ()">Submit With JQ</button>
-
+        
 
     </div>
 </body>
