--- a/Registar/MvcFirst/MvcFirst/Views/Home/Index.cshtml
+++ b/Registar/MvcFirst/MvcFirst/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
         @*<a href="#" style="color:gray">See list of bikes in your city</a>*@
         <a href="#">See list of all stolen bikes</a>
         <br />
-        @Html.ActionLink("See list of bikes in your city", "BikesFromCity", new { cityName = "Skopje" })
+        @Html.ActionLink("See list of bikes in your city", "BikesFromCity", new { cityName = "Skopje" });
 
 
     </div>
